Issue #2622 - break word to avoid overflow with long string

--- a/webcompat/static/css/src/issue.css
+++ b/webcompat/static/css/src/issue.css
@@ -123,3 +123,7 @@
     min-width: 0;
   }
 }
+
+.issue-details {
+  word-break: break-all;
+}
